--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-highlightjs": "~0.4.3",
     "angular-ui-codemirror": "~0.3.0",
     "angular-loading-bar": "~0.8.0",
-    "json-formatter": "~0.4.0"
+    "json-formatter": "~0.4.0",
+    "underscore": "~1.8.3"
   }
 }
