--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,9 @@
     "angular-ui-codemirror": "~0.3.0",
     "angular-loading-bar": "~0.8.0",
     "json-formatter": "~0.4.0",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "bootstrap-material-design": "~0.3.0",
+    "angular-ui-router-anim-in-out": "~0.0.13",
+    "angular-animate": "~1.4.4"
   }
 }
