--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE=homestead
+DB_DATABASE=mongo_admin
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
